WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89619
[Qt] REGRESSION(
r120790
): broke video rendering
https://bugs.webkit.org/show_bug.cgi?id=89619
Summary
[Qt] REGRESSION(r120790): broke video rendering
Philippe Normand
Reported
2012-06-20 17:13:01 PDT
I messed up with the pixel formats. Patch incoming, sorry for the inconvenience :)
Attachments
Patch
(2.45 KB, patch)
2012-06-20 17:16 PDT
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2012-06-20 17:16:15 PDT
Created
attachment 148687
[details]
Patch
Philippe Normand
Comment 2
2012-06-21 13:19:15 PDT
Alexis, would you qualify to review this patch? :)
Philippe Normand
Comment 3
2012-06-21 14:24:23 PDT
Comment on
attachment 148687
[details]
Patch Clearing flags on attachment: 148687 Committed
r120964
: <
http://trac.webkit.org/changeset/120964
>
Philippe Normand
Comment 4
2012-06-21 14:24:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug