[Qt] REGRESSION(r120790): broke video rendering https://bugs.webkit.org/show_bug.cgi?id=89619

Reviewed by Alexis Menard.

Invert the pixel components of the Image on little endian architectures.

* platform/graphics/gstreamer/ImageGStreamerQt.cpp:
(ImageGStreamer::ImageGStreamer):

Canonical link: https://commits.webkit.org/107552@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120964 268f45cc-cd09-0410-ab3c-d52691b4dbfc